@@ -321,9 +321,7 @@ boost::shared_ptr<const GenericVector> Function::vector() const
 bool Function::in(const FunctionSpace& V) const
 {
   assert(_function_space);
-  return _function_space->element().get() == V.element().get() &&
-    _function_space->mesh().get() == V.mesh().get() &&
-    _function_space->dofmap().get() == V.dofmap().get() ;
+  return *_function_space == V;
 }
 //-----------------------------------------------------------------------------
 dolfin::uint Function::geometric_dimension() const
