@@ -1,3 +1,4 @@
+ - Added [un]equality operator to FunctionSpace
  - Remove batch compilation of Expression (Expressions) from Python interface
  - Added get_value to MeshValueCollection
  - Added assignment operator to MeshValueCollection
